# clawpet

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: completion-report.md  execution-plan.md  multi-species-schema.md  proposal.md
scripts/: install_local.sh
skill/: SKILL.md
skill/scripts/: clawpet.sh
src/clawpet/: __init__.py  cli.py  core.py
src/clawpet/data/: __init__.py
src/clawpet/data/pets/: __init__.py  bunny-scout.json  captain.json  index.json  lingling.json  mochi.json  momo.json
templates/: soul-injection.md
tests/: test_core.py
