[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawpet"
version = "0.1.5"
description = "OpenClaw pet companion toolkit with catime-compatible character data."
readme = "README.md"
requires-python = ">=3.11,<4"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
]

[project.scripts]
clawpet = "clawpet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clawpet"]

[tool.hatch.build.targets.wheel.force-include]
"src/clawpet/data" = "clawpet/data"

[tool.pytest.ini_options]
testpaths = ["tests"]

